--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,12 @@
 <body>
     
     <div class="bg-white h-screen flex flex-col items-center">
-        <h1 class="text-5xl font-bold p-4">Task Manager</h1>
-        {% block content %}
-        {% endblock content %}
+        <h1 class="text-5xl font-bold p-4">Todo Manager</h1>
+        <div>
+            {% block content %}
+            {% endblock content %}
+        </div>
+        
     </div>
     
 </body>
