--- a/templates/completed.html
+++ b/templates/completed.html
@@ -19,7 +19,6 @@
     </div>      
 </div>
 
-<a class="bg-red-600  text-white p-2 px-5 rounded-md my-4" href="/create-task">Add Task</a>
 
 <div class="flex flex-col">
     {% for task in tasks %}    
@@ -38,6 +37,10 @@
     {% endfor %}
 </div>
 
+
+<div class="text-center my-5">
+    <a class="bg-red-600  text-white p-2 px-5 rounded-md my-4" href="/create-task">Add Task</a>
+</div>
 
 
 {% endblock content %}
