--- a/templates/task.html
+++ b/templates/task.html
@@ -22,7 +22,6 @@
     </div>      
 </div>
 
-<a class="bg-red-600  text-white p-2 px-5 rounded-md my-4" href="/create-task">Add Task</a>
 
 <h2 class="text-2xl font-semibold p-3">Tasks</h2>
 
@@ -43,6 +42,8 @@
     {% endfor %}
 </div>
 
-
+<div class="text-center my-5">
+    <a class="bg-red-600  text-white p-2 px-5 rounded-md my-4" href="/create-task">Add Task</a>
+</div>
 
 {% endblock content %}
