--- a/templates/task_update.html
+++ b/templates/task_update.html
@@ -4,7 +4,7 @@
 
 {% block  content %}
 <h1 class="text-xl font-bold pt-6">Update Todo</h1>
-<form action="/create-task/" method="POST">
+<form  method="POST">
     {% csrf_token %}
     {% for field in form %}                   
         <div class="fieldWrapper  p-3">
